# go2_jump

./: .dockerignore  .gitignore  .gitmodules  README.md  README.zh-CN.md  algorithm.md  algorithm.zh-CN.md
docker/: Dockerfile.humble  bootstrap_third_party.sh
docs/: calibration_workflow.md  calibration_workflow.zh-CN.md  control_stack.md  control_stack.zh-CN.md  development_workflow.md  development_workflow.zh-CN.md
patches/unitree_mujoco/: 0001-go2-sim-compat.patch
scripts/: apply_local_patches.sh  bootstrap_third_party.sh  bootstrap_workspace_repo.sh  container_source_env.sh  docker_build_image.sh  docker_build_workspace.sh  docker_launch_jump_stack.sh  docker_run_go2_mujoco.sh  docker_run_jump_batch.sh  docker_run_single_jump_trial.sh  docker_smoke_test_stack.sh  docker_verify_rt_lowcmd.sh  jump_launch_args.sh  jump_profiles.sh  record_jump_trial.py  run_airborne_priority_trial.sh  summarize_jump_trials.py  sweep_pitch_capture_balance.sh  sweep_profile_takeoff_speed_scale.sh  sweep_takeoff_speed_scale.sh
src/go2_jump_bringup/: CMakeLists.txt  package.xml
src/go2_jump_bringup/config/: jump_params.yaml  mpc_params.yaml
src/go2_jump_bringup/launch/: sim_jump.launch.py
src/go2_jump_controller/: CMakeLists.txt  package.xml
src/go2_jump_controller/include/go2_jump_controller/: unitree_crc.hpp
src/go2_jump_controller/src/: jump_controller_node.cpp  unitree_crc.cpp
src/go2_jump_core/include/go2_jump_core/: jump_task.hpp
src/go2_jump_core/src/: jump_task.cpp
src/go2_jump_mpc/: CMakeLists.txt
src/go2_jump_mpc/include/go2_jump_mpc/: whole_body_mpc.hpp
src/go2_jump_mpc/src/: whole_body_mpc.cpp  whole_body_mpc_node.cpp
src/go2_jump_msgs/msg/: JumpControllerState.msg
src/go2_jump_planner/: CMakeLists.txt  package.xml
src/go2_jump_planner/include/go2_jump_planner/: jump_plan.hpp
src/go2_jump_planner/src/: jump_plan.cpp  jump_plan_cli.cpp  jump_target_node.cpp
tools/: CMakeLists.txt  verify_rt_lowcmd.cpp
